force-app/main/default/objects/Campaign/fields/Campaign_Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Landing_Page_URL__c</fullName>
    <description>The campaign landing page URL should always contain a campaign id parameter, e.g.:

     http://www.viewsonic.com/landing_page.php?campaign_id=123456</description>
    <label>Campaign Landing Page URL</label>
    <type>Url</type>
</CustomField>