force-app/main/default/objects/Campaign/fields/Campaign_Name_Special__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_Special__c</fullName>
    <formula>left(Name, find(&apos;&amp;&apos;,Name)-1)&amp;

Substitute(Name, left(Name,find(&apos;&amp;&apos;,Name)),&apos;%26&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name Special</label>
    <type>Text</type>
</CustomField>