force-app/main/default/objects/Campaign/fields/Campaign_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Short_Name__c</fullName>
    <formula>if(  contains(lower(Name),&apos;append&apos;),   left(Name, Find(&apos;-&apos;, Name ) -2), Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Short Name</label>
    <type>Text</type>
</CustomField>