force-app/main/default/objects/Campaign/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <label>Emails</label>
    <summaryFilterItems>
        <field>CampaignMember.Email_Sent__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>