force-app/main/default/objects/Campaign/fields/Number_of_Leads_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads_Contacts__c</fullName>
    <formula>NumberOfContacts + NumberOfLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Leads &amp; Contacts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>