force-app/main/default/objects/Campaign/fields/Number_of_Scanned_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scanned_Leads__c</fullName>
    <formula>if(not(Contains(lower(Name),&apos;append&apos;))=true,NumberOfLeads, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Scanned Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>