force-app/main/default/objects/Campaign/fields/PlanViewCal__AT_PlanView_Exclude__c.field-meta.xml
<CustomField>
    <fullName>PlanViewCal__AT_PlanView_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked then record is not shown in AppOhm&apos;s PlanView screen.</description>
    <label>AT PlanView Exclude</label>
    <type>Checkbox</type>
</CustomField>