force-app/main/default/objects/Campaign/fields/Promo_Descritption__c.field-meta.xml
<CustomField>
    <fullName>Promo_Descritption__c</fullName>
    <label>Promo Descritption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>