force-app/main/default/objects/Campaign/fields/Promo_Title__c.field-meta.xml
<CustomField>
    <fullName>Promo_Title__c</fullName>
    <label>Promo Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>