force-app/main/default/objects/Campaign/fields/Scanned__c.field-meta.xml
<CustomField>
    <fullName>Scanned__c</fullName>
    <formula>Contains(lower( Name ),&apos;append&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scanned</label>
    <type>Checkbox</type>
</CustomField>