force-app/main/default/objects/Campaign/recordTypes/VSA.recordType-meta.xml
<RecordType>
    <fullName>VSA</fullName>
    <active>true</active>
    <label>VSA</label>
</RecordType>