force-app/main/default/objects/Campaign/recordTypes/VSE.recordType-meta.xml
<RecordType>
    <fullName>VSE</fullName>
    <active>true</active>
    <label>VSE</label>
</RecordType>