force-app/main/default/objects/Campaign/recordTypes/VSI.recordType-meta.xml
<RecordType>
    <fullName>VSI</fullName>
    <active>true</active>
    <label>VSI</label>
</RecordType>