force-app/main/default/objects/Campaign/listViews/VSA_Biz_Dev.listView-meta.xml
<ListView>
    <fullName>VSA_Biz_Dev</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>VSA Business Development</value>
    </filters>
    <label>VSA Biz Dev</label>
    <language>en_US</language>
</ListView>